--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -636,6 +636,10 @@ h1, h2, h3, h4, h5, h6 {
   pointer-events: none;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .absolute {
   position: absolute;
 }
@@ -758,6 +762,22 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 1.5rem;
 }
 
+.mb-0\.5 {
+  margin-bottom: 0.125rem;
+}
+
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
+.mr-3 {
+  margin-right: 0.75rem;
+}
+
+.mb-1\.5 {
+  margin-bottom: 0.375rem;
+}
+
 .line-clamp-2 {
   overflow: hidden;
   display: -webkit-box;
@@ -775,6 +795,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .inline-flex {
   display: inline-flex;
+}
+
+.grid {
+  display: grid;
 }
 
 .hidden {
@@ -926,6 +950,10 @@ h1, h2, h3, h4, h5, h6 {
   cursor: pointer;
 }
 
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -958,6 +986,14 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: space-between;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-3 {
+  gap: 0.75rem;
+}
+
 .gap-x-2 {
   -moz-column-gap: 0.5rem;
        column-gap: 0.5rem;
@@ -965,6 +1001,15 @@ h1, h2, h3, h4, h5, h6 {
 
 .gap-y-1 {
   row-gap: 0.25rem;
+}
+
+.gap-x-4 {
+  -moz-column-gap: 1rem;
+       column-gap: 1rem;
+}
+
+.gap-y-2 {
+  row-gap: 0.5rem;
 }
 
 .space-x-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1007,6 +1052,18 @@ h1, h2, h3, h4, h5, h6 {
   --tw-space-x-reverse: 0;
   margin-right: calc(1.5rem * var(--tw-space-x-reverse));
   margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-1\.5 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.375rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.375rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]) {
@@ -1053,12 +1110,20 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 0.75rem;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .border {
   border-width: 1px;
 }
 
 .border-\[1\.5px\] {
   border-width: 1.5px;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border-b {
@@ -1115,6 +1180,23 @@ h1, h2, h3, h4, h5, h6 {
 
 .border-zinc-800\/50 {
   border-color: rgb(39 39 42 / 0.5);
+}
+
+.border-orange-500\/30 {
+  border-color: rgb(249 115 22 / 0.3);
+}
+
+.border-zinc-600\/50 {
+  border-color: rgb(82 82 91 / 0.5);
+}
+
+.border-zinc-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(82 82 91 / var(--tw-border-opacity, 1));
+}
+
+.border-t-orange-500\/80 {
+  border-top-color: rgb(249 115 22 / 0.8);
 }
 
 .bg-orange-500 {
@@ -1176,6 +1258,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .bg-zinc-900\/80 {
   background-color: rgb(24 24 27 / 0.8);
+}
+
+.bg-orange-500\/20 {
+  background-color: rgb(249 115 22 / 0.2);
 }
 
 .bg-gradient-to-br {
@@ -1441,6 +1527,15 @@ h1, h2, h3, h4, h5, h6 {
   color: rgb(82 82 91 / var(--tw-text-opacity, 1));
 }
 
+.text-orange-300 {
+  --tw-text-opacity: 1;
+  color: rgb(253 186 116 / var(--tw-text-opacity, 1));
+}
+
+.opacity-0 {
+  opacity: 0;
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1494,6 +1589,12 @@ h1, h2, h3, h4, h5, h6 {
 
 .transition-transform {
   transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-opacity {
+  transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1636,6 +1737,10 @@ svg {
   color: rgb(228 228 231 / var(--tw-text-opacity, 1));
 }
 
+.focus\:border-orange-500\/40:focus {
+  border-color: rgb(249 115 22 / 0.4);
+}
+
 .focus\:ring-1:focus {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -1644,6 +1749,14 @@ svg {
 
 .focus\:ring-orange-500\/40:focus {
   --tw-ring-color: rgb(249 115 22 / 0.4);
+}
+
+.focus\:ring-orange-500\/50:focus {
+  --tw-ring-color: rgb(249 115 22 / 0.5);
+}
+
+.focus\:ring-offset-zinc-900:focus {
+  --tw-ring-offset-color: #18181b;
 }
 
 .disabled\:cursor-not-allowed:disabled {
@@ -1655,6 +1768,14 @@ svg {
 }
 
 @media (min-width: 640px) {
+  .sm\:w-auto {
+    width: auto;
+  }
+
+  .sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .sm\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
